--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -22,7 +22,7 @@
       </nav>
     </header>
     <main>
-      <img src="images/unsplash.jpg" alt="chapel ceiling"/>
+      <img src="Images/unsplash.jpg" alt="chapel ceiling"/>
     </main>
     <footer>
       <hr>
