--- a/HarpeGaming/hg_towers.html
+++ b/HarpeGaming/hg_towers.html
@@ -2,7 +2,7 @@
 <!--Lauren Werner 01/30/24-->
 <html lang="en">
   <head>
-    <title>hg_towers</title>
+    <title>Towers</title>
     <meta name="author" value="Lauren Werner" />
     <meta charset="UTF-8"/>
     <meta name="description" content="Harpe Gaming, the best games are the ones that
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header role="banner">
-      <a href="hg_index.html"><img src="images/hg_logo.png" alt="logo_of_Harpe_Gaming_with_subtext_reading_Games_of_all_types_for_all_players"></a>
+      <a href="hg_index.html"><img src="Images/hg_logo.png" alt="logo_of_Harpe_Gaming_with_subtext_reading_Games_of_all_types_for_all_players"></a>
       <nav role="main">
         <ul>
           <li><a href="hg_index.html">Home</a></li>
@@ -22,7 +22,7 @@
       </nav>
      </header>
     <main>
-      <img src="images/hg_towers.png" alt="a_collection_of_temple_collumns_in_different_ccolors.">
+      <img src="Images/hg_towers.png" alt="a_collection_of_temple_collumns_in_different_ccolors.">
       <h2>Review of Towers and Temples</h2>
       <dl>
         <dt>Game ID:</dt>
