--- a/HarpeGaming/hg_index.html
+++ b/HarpeGaming/hg_index.html
@@ -2,7 +2,7 @@
 <!--Lauren Werner 01/16/24-->
 <html lang="en">
   <head>
-    <title>hg_index</title>
+    <title>Home</title>
     <meta name="author" value="Lauren Werner" />
     <meta charset="UTF-8"/>
     <meta name="description" content="Harpe Gaming, the best games are the ones that
@@ -13,7 +13,7 @@
   </head>
   <body>
    <header role="banner">
-    <a href="hg_index.html"><img src="images/hg_logo.png" alt="logo_of_Harpe_Gaming_with_subtext_reading_Games_of_all_types_for_all_players"></a>
+    <a href="hg_index.html"><img src="Images/hg_logo.png" alt="logo_of_Harpe_Gaming_with_subtext_reading_Games_of_all_types_for_all_players"></a>
     <nav role="main">
       <ul>
         <li><a href="hg_index.html">Home</a></li>
