--- a/MissionImpossible/MissionImpossibleBatgirl.html
+++ b/MissionImpossible/MissionImpossibleBatgirl.html
@@ -50,9 +50,9 @@
   <hr>
   <section>
     <h1>Heading1 Image Practice</h1>
-    <img src="images/batgirl.jpg" alt="plastic_lego_figurine_of_the_character_batgirl"/>
+    <img src="Images/batgirl.jpg" alt="plastic_lego_figurine_of_the_character_batgirl"/>
     <br>
-    <a href="https://cwi.edu/" target="_blank"><img src="images/CLICK-ME(1).png"></a>
+    <a href="https://cwi.edu/" target="_blank"><img src="Images/CLICK-ME(1).png"></a>
    <p>Click on the image above to be taken to the College of Western Idaho website; open the link in a new tab</p>
   </section>
   </main>
