--- a/LaurenWernerPersonalPortfolioSite/experience.html
+++ b/LaurenWernerPersonalPortfolioSite/experience.html
@@ -67,17 +67,17 @@
           <section>
             <!--Work Example articles-->
             <article>
-              <a href="https://catrainbow21.github.io/DurangoJewelry/index.html"><img src="Images/necklace.jpg" alt="smoky_quartz_pendant"></a>
+              <a href="https://catrainbow21.github.io/DurangoJewelry/index.html" target="_blank"><img src="Images/necklace.jpg" alt="smoky_quartz_pendant"></a>
               <p>Durango Jewelry</p>
             </article>
 
             <article>
-              <a href="https://catrainbow21.github.io/CityFarmer/cf_index.html"><img src="Images/cityfarmer.jpg" alt="hands_holding_city_and_large_tree"></a>
+              <a href="https://catrainbow21.github.io/CityFarmer/cf_index.html" target="_blank"><img src="Images/cityfarmer.jpg" alt="hands_holding_city_and_large_tree"></a>
               <p>City Farmer</p>
             </article>
 
             <article>
-              <a href="https://catrainbow21.github.io/MissionImpossible/MissionImpossibleBatgirl.html" ><img src="Images/batgirl.jpg" alt="plastic_miniature_of_Batgirl"></a>
+              <a href="https://catrainbow21.github.io/MissionImpossible/MissionImpossibleBatgirl.html" target="_blank"><img src="Images/batgirl.jpg" alt="plastic_miniature_of_Batgirl"></a>
               <p>Mission Impossible</p>
             </article>
 
