--- a/LaurenWernerPersonalPortfolioSite/contact.html
+++ b/LaurenWernerPersonalPortfolioSite/contact.html
@@ -80,14 +80,12 @@
                 <!-- Radio Buttons-->
                 
                 <div>
-                  <label>How did you find me?</label>
-                  <br>
-                  <br>
-                  <br>
-                  <input type="radio" name="linkedin" id="linkedin" value="linkedin"><label for="linkedin">LinkedIn</label>
-                  <input type="radio" name="jobfair" id="jobfair" value="jobfair"><label for="jobfair">Job Fair</label>
-                  <input type="radio" name="cwi" id="cwi" value="cwi"><label for="cwi">CWI Corporate Partner</label>
-                  <input type="radio" name="other" id="other" value="other"><label for="other">Other</label>
+                  <p>How did you find me?</p>
+                  
+                  <input type="radio" name="howfound" id="linkedin" value="Linkedin"><label for="linkedin">LinkedIn</label>
+                  <input type="radio" name="howfound" id="jobfair" value="Jobfair"><label for="jobfair">Job Fair</label>
+                  <input type="radio" name="howfound" id="cwi" value="Cwi"><label for="cwi">CWI Corporate Partner</label>
+                  <input type="radio" name="howfound" id="other" value="Other"><label for="other">Other</label>
                 </div>
                 <div>
                   <!-- Text Area-->	
