--- a/LaurenWernerPersonalPortfolioSite/experience.html
+++ b/LaurenWernerPersonalPortfolioSite/experience.html
@@ -20,7 +20,7 @@
         <!--Navigation-->
         <nav>
           <ul>
-            <li><a href="Index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="experience.html">Experience</a></li>
             <li><a href="contact.html">Contact Me</a></li>
